<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AntreTidakLangsungActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.3"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:text="@string/pemecahan"
                android:textColor="@android:color/primary_text_light"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_data_pemohon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="16dp"
                android:gravity="start"
                android:text="@string/data_pemohon"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_nama"
                style="@style/ContentStyle"
                android:background="@drawable/parent_background"
                android:hint="@string/nama_lengkap"
                android:inputType="textPersonName|textCapWords|textAutoComplete|textAutoCorrect" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_tanggal_lahir"
                style="@style/ContentStyle"
                android:background="@drawable/child_background"
                android:drawableEnd="@drawable/ic_date_range"
                android:hint="@string/tanggal_lahir"
                android:inputType="date" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_pekerjaan"
                style="@style/ContentStyle"
                android:background="@drawable/parent_background"
                android:hint="@string/pekerjaan"
                android:inputType="text|textAutoCorrect|textAutoComplete|textCapWords"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_NIK"
                style="@style/ContentStyle"
                android:background="@drawable/child_background"
                android:hint="@string/nomor_nik"
                android:inputType="number"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_alamat"
                style="@style/ContentStyle"
                android:background="@drawable/parent_background"
                android:hint="@string/alamat_lengkap_saat_ini"
                android:inputType="textMultiLine|textAutoComplete|textAutoCorrect|textCapSentences"
                android:maxLines="3" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_tanggal_pengurusan"
                style="@style/ContentStyle"
                android:background="@drawable/child_background"
                android:drawableEnd="@drawable/ic_date_range"
                android:hint="@string/tanggal_pengurusan"
                android:inputType="date" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_nomor_whatsapp"
                style="@style/ContentStyle"
                android:background="@drawable/parent_background"
                android:hint="@string/nomor_whatsapp_yang_masih_aktif"
                android:inputType="phone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_diwakilkan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="16dp"
                android:text="@string/data_yang_diwakilkan"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="20sp" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_nama_diwakilkan"
                style="@style/ContentStyle"
                android:background="@drawable/child_background"
                android:hint="@string/nama_lengkap"
                android:inputType="textPersonName|textCapWords|textAutoCorrect|textAutoComplete" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_tanggal_lahir_diwakilkan"
                style="@style/ContentStyle"
                android:background="@drawable/parent_background"
                android:drawableEnd="@drawable/ic_date_range"
                android:hint="@string/tanggal_lahir"
                android:inputType="date" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_pekerjaan_diwakilkan"
                style="@style/ContentStyle"
                android:background="@drawable/child_background"
                android:hint="@string/pekerjaan"
                android:inputType="textAutoComplete|textAutoCorrect|textCapWords|text"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_NIK_diwakilkan"
                style="@style/ContentStyle"
                android:background="@drawable/parent_background"
                android:hint="@string/nomor_nik"
                android:inputType="number"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_alamat_diwakilkan"
                style="@style/ContentStyle"
                android:background="@drawable/child_background"
                android:hint="@string/alamat_lengkap_saat_ini"
                android:inputType="textMultiLine|textAutoCorrect|textAutoComplete|textCapSentences"
                android:maxLines="3" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/parent_background"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_tambah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/sila_tambahkan_berkas_pdf_pdf"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="22sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_tambah"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:text="@string/plus"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_kumpulkan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/kumpulkan"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress_horizontal"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:keepScreenOn="true"
                android:visibility="invisible" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>